_attachments/themes/commentonit/style.css
@import url(../twentyten/style.css);

/* fixes */

.entry-content, .entry-summary {
  padding-top: 0;
}

#content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
  line-height: 24px;
}

#content .entry-title {
  margin-bottom: 20px;
}

#header h1 {
  margin-bottom: 0;
  text-transform: uppercase;
}

#site-description {
  clear:left;
  float:left;
  font-size:15px;
  font-style:italic;
  letter-spacing:normal;
  margin: 0;
  padding: 0;
  margin-bottom: 15px;
  text-transform:none;
  width:auto;
}

/* edit form */

form.doc-edit input, form.doc-edit textarea {
  width: 80%;
}

textarea.doc-body {
  height: 400px;
}

